<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xuxiao415.mycourse.MyActivity.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg">

        <com.example.xuxiao415.mycourse.MyView.ClearEditText
            android:id="@+id/username"
            android:hint="@string/studentnumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:drawableRight="@drawable/delete_selector"
            android:textColorHighlight="#C0C0C0"
            android:completionThreshold="1"
            android:popupTheme="@style/Base.TextAppearance.AppCompat.Widget.PopupMenu.Header"/>
        <com.example.xuxiao415.mycourse.MyView.ClearEditText
            android:id="@+id/userpassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:textColorHighlight="#C0C0C0"/>
        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"/>

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autologin"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <Button
            android:id="@+id/loginbutton"
            android:text="@string/login"
            android:layout_width="250dp"
            android:textSize="16sp"
            android:textColor="#2a5caa"
            android:background="@drawable/button"
            android:layout_height="wrap_content"
            />
</LinearLayout>
