<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coursebg"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#9900BFFF"
        android:gravity="right">

        <ImageView
            android:id="@+id/morebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:src="@drawable/morebutton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="2dp"
        android:background="#6600BFFF"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday" />
    </LinearLayout>

    <com.example.xuxiao415.mycourse.MyView.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:text="2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="120dp"
                    android:gravity="center"
                    android:text="3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="180dp"
                    android:gravity="center"
                    android:text="4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="240dp"
                    android:gravity="center"
                    android:text="5" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="300dp"
                    android:gravity="center"
                    android:text="6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="360dp"
                    android:gravity="center"
                    android:text="7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="420dp"
                    android:gravity="center"
                    android:text="8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="480dp"
                    android:gravity="center"
                    android:text="9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="540dp"
                    android:gravity="center"
                    android:text="10" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="600dp"
                    android:gravity="center"
                    android:text="11" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="660dp"
                    android:gravity="center"
                    android:text="12" />


            </FrameLayout>

            <FrameLayout
                android:id="@+id/framelayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">




            </FrameLayout>

            <FrameLayout
                android:id="@+id/framelayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <FrameLayout
                android:id="@+id/framelayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <FrameLayout
                android:id="@+id/framelayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <FrameLayout
                android:id="@+id/framelayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <FrameLayout
                android:id="@+id/framelayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>

            <FrameLayout
                android:id="@+id/framelayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


            </FrameLayout>
        </LinearLayout>
    </com.example.xuxiao415.mycourse.MyView.MyScrollView>
</LinearLayout>